# customer-churn-analytics

./: .gga  .gitignore  AGENTS.md  README.md  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/churn_api/: __init__.py  main.py
apps/api/src/churn_api/adapters/: filesystem.py  scoring.py
apps/api/src/churn_api/application/: dashboard_contract.py  services.py
apps/api/src/churn_api/application/ports/: artifacts.py  scoring.py
apps/api/src/churn_api/domain/: __init__.py  artifacts.py  predictions.py
apps/api/src/churn_api/presentation/http/: routes.py  schemas.py
apps/api/tests/: test_analytics_api.py  test_api_tooling_bootstrap.py
apps/api/tests/adapters/: test_filesystem_snapshot_reader.py
apps/api/tests/application/: test_dashboard_contract.py
apps/web/: eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.mts
apps/web/app/: layout.test.ts  layout.tsx  page.tsx
apps/web/app/(dashboard)/: error.tsx  (+5 more)
apps/web/e2e/: dashboard.spec.ts  mock-dashboard-api.mjs  tooling.spec.ts
apps/web/lib/: project-metadata.test.ts  project-metadata.ts
docs/: api-contract.md  architecture.md  dataset-card.md  dataset-metadata.template.json  local-verification.md  modeling-report.md
openspec/: config.yaml
openspec/changes/ai-student-impact-analytics/: design.md  tasks.md
openspec/changes/customer-churn-analytics-platform/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/specs/churn-analytics-api/: spec.md
openspec/specs/churn-ml-artifacts/: spec.md
openspec/specs/dataset-acquisition/: spec.md
scripts/: delivery_guardrails.py
scripts/delivery_guardrails_lib/: __init__.py  cli.py  documentation.py  metadata.py  result.py  review_budget.py  workflow.py
(+22 files in other folders)
