[project]
name = "personal-portafolio"
version = "0.1.0"
description = "Customer churn analytics portfolio workspace."
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
  "fastapi>=0.125.0",
  "httpx>=0.28.1",
  "joblib>=1.5.3",
  "mypy>=1.18.2",
  "pandas>=3.0.3",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.9",
  "scikit-learn>=1.9.0",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=packages/ml/src --cov=apps/api/src --cov-report=term-missing"
pythonpath = ["packages/ml/src", "apps/api/src"]
testpaths = ["packages/ml/tests", "apps/api/tests"]
markers = [
  "unit: fast isolated tests",
  "integration: tests crossing module or adapter boundaries",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["packages/ml/src", "apps/api/src"]

[[tool.mypy.overrides]]
module = ["joblib"]
ignore_missing_imports = true
