[project]
name = "churn-api"
version = "0.1.0"
description = "FastAPI adapter package for churn analytics artifacts."
requires-python = ">=3.12,<3.15"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/churn_api"]
